# imitation_learning_AV

./: .gitignore  .gitmodules  README.md  bag_record.sh  frames.gv  note.txt
ElectricalModel/: vehicle_sim_mst.slx
src/: frames.gv
src/aesk_darknet_republish/: CMakeLists.txt  package.xml
src/aesk_darknet_republish/config/: default.yaml
src/aesk_darknet_republish/include/: DarknetToVision.hpp
src/aesk_darknet_republish/launch/: default.launch
src/aesk_darknet_republish/src/: DarknetToVision.cpp  darknet_to_vision_node.cpp
src/aesk_kalman/: CMakeLists.txt  package.xml
src/aesk_kalman/launch/: aesk_kalman.launch
src/aesk_kalman/params/: dual_ekf_node.yaml  ekf_navsat_node.yaml  ekf_node_map.yaml  ekf_node_odom.yaml
src/aesk_kalman/rviz/: aesk_kalman_rviz.rviz
src/aesk_kalman/src/: odom_trans_node.cpp  tf_Odom.cpp
src/aesk_object_localization/: CMakeLists.txt  package.xml
src/aesk_object_localization/action/: DeleteSign.action  Park.action  ProjectedCloud.action  SignTracker.action
src/aesk_object_localization/config/: camera_depth_estimator.yaml  default.yaml  default_airsim.yaml  extrinsics.cfg  filter.yaml  lane3d_combiner.yaml  lidar_cluster.yaml  lidar_tracker.yaml  park_tracker.yaml  playground_params.cfg  roi_filter.yaml  sign_finder.yaml  sign_tracker.yaml  visualize.yaml
src/aesk_object_localization/include/: kdtree.h
src/aesk_object_localization/include/aesk_object_localization/: CloudFilter.hpp  CloudPainter.hpp  DarknetRepublish.hpp  ParkTracker.hpp  PointCloudInterface.hpp  PointCloudOpen3D.hpp  PointCloudRos.hpp  PointXYZIR.h  PointXYZpXpY.hpp
src/aesk_object_localization/include/aesk_object_localization/CameraDepthEstimator/: CameraDepthEstimator.hpp
src/aesk_object_localization/include/aesk_object_localization/LidarCluster/: LidarCluster.hpp
src/aesk_object_localization/include/aesk_object_localization/ROIFilter/: ROIFilter.hpp
src/aesk_object_localization/include/aesk_object_localization/lane3d_combiner/: Lane3DCombiner.hpp
src/aesk_object_localization/include/aesk_object_localization/lidar_tracker/: LidarTracker.hpp  Object.hpp  ObjectTracker.hpp
src/aesk_object_localization/include/aesk_object_localization/sign_finder/: SignFinder.hpp
src/aesk_object_localization/launch/: Lane3D.launch  Lane3D_airsim.launch  ObjectLocalizer.launch
src/aesk_object_localization/msg/: ArrayOfPointCloud2s.msg  PointCloud2WithId.msg
src/aesk_object_localization/scripts/: clustering_dbscan.py  clustering_nearest.py  clustering_park.py  clustering_signs.py  dynamic_extrinsics.py  lane_3D.py  visualize.py
src/aesk_object_localization/src/: CloudFilter.cpp  CloudPainter.cpp  DarknetRepublish.cpp  ParkTracker.cpp  PointCloudOpen3D.cpp  PointCloudRos.cpp  cloud_filter_node.cpp  cloud_filter_node_mf.cpp  cloud_painter_node.cpp  darknet_republish_node.cpp  kdtree.cpp  kdtree_main.cpp  park_tracker_node.cpp
src/aesk_object_localization/src/CameraDepthEstimator/: CameraDepthEstimator.cpp  camera_depth_estimator_node.cpp
src/aesk_object_localization/src/LidarCluster/: LidarCluster.cpp  lidar_cluster_node.cpp
src/aesk_object_localization/src/ROIFilter/: ROIFilter.cpp  roi_filter_node.cpp
src/aesk_object_localization/src/lane3d_combiner/: Lane3DCombiner.cpp  lane3d_combiner_node.cpp
src/aesk_object_localization/src/lidar_tracker/: LidarTracker.cpp  Object.cpp  ObjectTracker.cpp  lidar_tracker_node.cpp
src/aesk_object_localization/src/playground/: playground.cpp
src/aesk_object_localization/src/sign_finder/: SignFinder.cpp  sign_finder_node.cpp
src/aesk_swerve/: CMakeLists.txt  package.xml
src/aesk_swerve/action/: Bezier.action
src/aesk_swerve/config/: bezier_swerve.yaml
src/aesk_swerve/include/: bezier_swerve.h
src/aesk_swerve/launch/: bezier_swerve.launch
src/aesk_swerve/src/Bezier_Action_Server/: Bezier.py  action_server.py
src/aesk_swerve/src/Bezier_Swerve/: bezier_swerve.cpp  bezier_swerve_main.cpp
src/aesk_visualization/: CMakeLists.txt  README.md  package.xml
src/aesk_visualization/src/detection_3d_viz/: Detection3DViz.cpp  detection_3d_viz_node.cpp
src/aesk_visualization/src/lane_2d_viz/: Lane2DViz.cpp  lane_2d_viz_node.cpp
src/aesk_visualization/src/projected_cloud_viz/: ProjectedCloudViz.cpp  projected_cloud_viz_node.cpp
src/bag2csv/: CMakeLists.txt  package.xml
src/bag2csv/config/: default.yml
src/bag2csv/launch/: bag2csv.launch  sim2bag.launch
src/bag2csv/param/: default.yaml  default.yml
src/bag2csv/scripts/: bag2csv.py  bag2csv.sh  bag_to_csv.py  msg_modifier.py  simulator2bag.sh
src/imitation_learning/: CMakeLists.txt  package.xml
src/imitation_learning/launch/: imitator.launch
src/imitation_learning/param/: imitator.yaml
src/imitation_learning/scripts/: TestModel.py  TrainingModel.py  imitator.py  main.py  model.h5  utlis.py
src/lane_finder/: CMakeLists.txt  package.xml
src/obstacle_detector/launch/: single_scanner.launch
src/obstacle_detector/resources/: obstacle_detector.rviz
src/obstacle_localizer/: CMakeLists.txt  package.xml
src/obstacle_localizer/launch /: obstacle_localizer.launch
src/obstacle_localizer/src/: obstacle_localizer.cpp  obstacle_localizer_node.cpp
src/perception/: CMakeLists.txt  package.xml
src/perception/launch/: lane_finder.launch
src/perception/msg/: waypoints.msg  waypoints_old.msg
src/perception/scripts/: data.pkl  deneme.py  depth_to_3D.py  image_to_3D.py  image_to_3D_sdk.py  lane_detect.py  lane_finder.py  lane_for_pid.py  lane_for_pid_ready.py  lane_for_pid_ready_deneme.py  old_lane_finder.py  pid_control.py  process_video.py  sim_test.py  waypoint_generator.py
src/perception/src/: depth_to_3D.cpp
src/ros2vehicle/: CMakeLists.txt  package.xml
src/ros2vehicle/launch/: ros2vehicle.launch
src/ros2vehicle/scripts/: joystick_control.py  ros2vehicle.py
src/vehicle2ros/: CMakeLists.txt  package.xml
src/vehicle2ros/config/: vehicle2ros.yaml
src/vehicle2ros/include/vehicle2ros/: AsyncSerial.h  vehicle2ros.h
src/vehicle2ros/launch/: vehicle2ros.launch
src/vehicle2ros/src/: AsyncSerial.cpp  vehicle2ros.cpp  vehicle2ros_node.cpp
(+4 files in other folders)
